# lightweight-iot-two-tier-ids

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: data_prep_interactive.py
scripts/cloud/: cloud_bbfs_filter.py  cloud_cnn_train.py  cloud_hgs_cnn_train.py
scripts/edge/: edge_bbfs_lr.py
src/iot_ids.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
