[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iot-ids"
version = "0.1.0"
description = "Lightweight IoT Intrusion Detection System"
authors = [{ name = "S Kumar Reddy Mallidi" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
